--- a/src/components/Mapbox/style.css
+++ b/src/components/Mapbox/style.css
@@ -1,3 +1,29 @@
-.map {
-    margin-left: 450px;
-}
+.studio:before {
+    content: ' ';
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    background: purple;
+    border-radius: 8px;
+    margin: 0 8px;
+  }
+  .studio {
+    border-radius: 20px;
+    padding-right: 12px;
+    margin: -12px;
+    color: transparent;
+    line-height: 24px;
+    font-size: 13px;
+    white-space: nowrap;
+  }
+  .studio span {
+    display: none;
+  }
+  .studio:hover {
+    background:black;
+    color: white;
+  }
+  .studio:hover span {
+    display: inline-block;
+  }
+  
