--- a/src/components/Mapbox/style.css
+++ b/src/components/Mapbox/style.css
@@ -27,3 +27,11 @@
     display: inline-block;
   }
   
+
+  .mapboxgl-ctrl {
+    width: 30px;
+    position: 'absolute';
+    top: 0;
+    left: 0;
+    margin: 10;
+  }
